# foo-model

./: Makefile  README.md  setup.cfg  setup.py
.github/workflows/: main.yaml
docs/: index.html
docs/FriendlyPerson/: index.html
docs/FriendlyPerson_knows/: index.html
docs/Person/: index.html
docs/person__first_name/: index.html
docs/person__id/: index.html
docs/person__knows/: index.html
docs/person__last_name/: index.html
docs/search/: search_index.json
foo_model/: sample_model.py
foo_model/jsonld/: sample_model.context.jsonld
model/: CONFIG.yaml
tests/: test_input_against_model.py
