[metadata]
name = foo_model
url = https://github.com/hsolbrig/foo-model
author = Harold Solbrig
author_email = solbbrig@jhu.edu
summary = A really nice model
description = A really nice model
long_description = A really nice model
home_page = https://hsolbrig.github.io/foo_model
license = CC0 1.0 Universal
python_requires = >=3.7
classifiers = 
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = 
    linkml
    LOD
    Modeling
    Linked
    open
    data
    model

[options]
include_package_data = True

[files]
packages =
    foo_model

data-files = foo_model/model = foo_model/model/*
    foo_model/jsonld_context = foo_model/jsonld_context/*
    foo_model/json_schema = foo_model/json_schema/*
    foo_model/model = foo_model/model/*


